--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -16,19 +16,24 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.4.5-SNAPSHOT</version>
+			<version>${project.parent.version}</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
-			<artifactId>hydra-http-utils</artifactId>
-			<version>${project.version}</version>
+			<artifactId>hydra-tika-utils</artifactId>
+			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-parsers</artifactId>
-			<version>1.1</version>
+			<groupId>com.findwise.hydra</groupId>
+			<artifactId>hydra-http-utils</artifactId>
+			<version>${project.parent.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.5</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -70,11 +75,35 @@
 			<plugin>
 				<groupId>com.ning.maven.plugins</groupId>
 				<artifactId>maven-duplicate-finder-plugin</artifactId>
-				<configuration>
-					<ignoredResources>
-						<ignoredResource>META-INF/BCKEY.*</ignoredResource>
-					</ignoredResources>
-				</configuration>
+                <configuration>
+                    <ignoredResources>
+                        <ignoredResource>META-INF/BCKEY.*</ignoredResource>
+                    </ignoredResources>
+                    <exceptions>
+                        <exception>
+                            <!-- These are transitive dependencies from Apache POI
+                             and the metadata-extractor parser libraries -->
+                            <conflictingDependencies>
+                                <dependency>
+                                    <groupId>org.apache.xmlbeans</groupId>
+                                    <artifactId>xmlbeans</artifactId>
+                                    <version>2.3.0</version>
+                                </dependency>
+                                <dependency>
+                                    <groupId>xml-apis</groupId>
+                                    <artifactId>xml-apis</artifactId>
+                                    <version>1.3.03</version>
+                                </dependency>
+                            </conflictingDependencies>
+                            <classes>
+                                <class>org.w3c.dom.DOMConfiguration</class>
+                                <class>org.w3c.dom.DOMStringList</class>
+                                <class>org.w3c.dom.TypeInfo</class>
+                                <class>org.w3c.dom.UserDataHandler</class>
+                            </classes>
+                        </exception>
+                    </exceptions>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -90,35 +119,34 @@
 						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 							<mainClass>com.findwise.hydra.stage.GroupStarter</mainClass>
 						</transformer>
+                        <!-- This merges the service resources, the important one in our case
+                            being META-INF/services/org.apache.tika.parser.Parser -->
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                    </transformers>
 
-						<!-- This merges the service resources, the important one in our case 
-							being META-INF/services/org.apache.tika.parser.Parser -->
-						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-					</transformers>
-
-					<!-- We need to remove any jar signatures since they won't match ours. 
-						Otherwise we get java.lang.SecurityException: Invalid signature file digest 
-						for Manifest main attributes -->
-					<filters>
-						<filter>
-							<artifact>*:*</artifact>
-							<excludes>
-								<exclude>META-INF/*.SF</exclude>
-								<exclude>META-INF/*.DSA</exclude>
-								<exclude>META-INF/*.RSA</exclude>
-							</excludes>
-						</filter>
-					</filters>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+                    <!-- We need to remove any jar signatures since they won't match ours.
+                        Otherwise we get java.lang.SecurityException: Invalid signature file digest
+                        for Manifest main attributes -->
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
