--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -24,6 +24,11 @@
 			<artifactId>hydra-tika-utils</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.5</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -61,6 +66,33 @@
 			<plugin>
 				<groupId>com.ning.maven.plugins</groupId>
 				<artifactId>maven-duplicate-finder-plugin</artifactId>
+                <configuration>
+                    <ignoredResources>
+                        <ignoredResource>META-INF/BCKEY.*</ignoredResource>
+                    </ignoredResources>
+                    <exceptions>
+                        <exception>
+                            <conflictingDependencies>
+                                <dependency>
+                                    <groupId>org.apache.xmlbeans</groupId>
+                                    <artifactId>xmlbeans</artifactId>
+                                    <version>2.3.0</version>
+                                </dependency>
+                                <dependency>
+                                    <groupId>xml-apis</groupId>
+                                    <artifactId>xml-apis</artifactId>
+                                    <version>1.3.03</version>
+                                </dependency>
+                            </conflictingDependencies>
+                            <classes>
+                                <class>org.w3c.dom.DOMConfiguration</class>
+                                <class>org.w3c.dom.DOMStringList</class>
+                                <class>org.w3c.dom.TypeInfo</class>
+                                <class>org.w3c.dom.UserDataHandler</class>
+                            </classes>
+                        </exception>
+                    </exceptions>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -76,17 +108,34 @@
 						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 							<mainClass>com.findwise.hydra.stage.GroupStarter</mainClass>
 						</transformer>
-					</transformers>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+                        <!-- This merges the service resources, the important one in our case
+                            being META-INF/services/org.apache.tika.parser.Parser -->
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                    </transformers>
+
+                    <!-- We need to remove any jar signatures since they won't match ours.
+                        Otherwise we get java.lang.SecurityException: Invalid signature file digest
+                        for Manifest main attributes -->
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
