--- a/stages/utils/tika/pom.xml
+++ b/stages/utils/tika/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.tika</groupId>
-            <artifactId>tika-parsers</artifactId>
+            <artifactId>tika-core</artifactId>
             <version>1.5</version>
         </dependency>
         <dependency>
@@ -63,42 +63,6 @@
                     </ignoredResources>
                 </configuration>
             </plugin>
-            <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>1.7.1</version>
-            <configuration>
-                <!-- Setting the finalName to fit the naming convention of other stages -->
-                <finalName>${project.name}</finalName>
-                <transformers>
-                    <!-- This merges the service resources, the important one in our case
-                        being META-INF/services/org.apache.tika.parser.Parser -->
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                </transformers>
-
-                <!-- We need to remove any jar signatures since they won't match ours.
-                    Otherwise we get java.lang.SecurityException: Invalid signature file digest
-                    for Manifest main attributes -->
-                <filters>
-                    <filter>
-                        <artifact>*:*</artifact>
-                        <excludes>
-                            <exclude>META-INF/*.SF</exclude>
-                            <exclude>META-INF/*.DSA</exclude>
-                            <exclude>META-INF/*.RSA</exclude>
-                        </excludes>
-                    </filter>
-                </filters>
-            </configuration>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
