--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.4.3-SNAPSHOT</version>
+		<version>0.4.3</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.4.3-SNAPSHOT</version>
+			<version>0.4.3</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
