--- a/test-suite/pom.xml
+++ b/test-suite/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
-		<version>0.4.3-SNAPSHOT</version>
+		<version>0.4.3</version>
 	</parent>
 
 	<modules>
