--- a/stages/utils/http/pom.xml
+++ b/stages/utils/http/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.4.4-SNAPSHOT</version>
+		<version>0.4.4</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>hydra-http-utils</artifactId>
