--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.4.4</version>
+		<version>0.4.5-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
