Adds possibility to set default jvm parameters for all stages

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -57,6 +57,13 @@ core.cache.enabled = true
 
 # core.rest.thread_count = 32
 
+# Default JVM parameters for stages
+#
+# Type: String
+# Default: null
+
+# core.stages.jvm_parameters =
+
 ######################################
 # Settings for the backing database. #
 ######################################
