Adds example default jvm parameters to configuration

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -62,7 +62,7 @@ core.cache.enabled = true
 # Type: String
 # Default: null
 
-# core.stages.jvm_parameters =
+# core.stages.jvm_parameters = -Xms4m -Xmx64m
 
 ######################################
 # Settings for the backing database. #
