--- a/stages/utils/tika/pom.xml
+++ b/stages/utils/tika/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.findwise.hydra</groupId>
         <artifactId>stages</artifactId>
-        <version>0.4.5-SNAPSHOT</version>
+        <version>0.4.5</version>
         <relativePath>../..</relativePath>
     </parent>
     <artifactId>hydra-tika-utils</artifactId>
