--- a/stages/in/server/pom.xml
+++ b/stages/in/server/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.4.5</version>
+		<version>0.4.6-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>hydra-input-server</artifactId>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-api</artifactId>
-            <version>0.4.5</version>
+            <version>0.4.6-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
